# AutotraderV3

./: Makefile  README.md  pyproject.toml  requirements.txt  stock_symbols.csv
autotrader/: backtesting.py  constants.py  data_utils.py  events.py  main.py  optimization.py  requirements.txt  schedule_utils.py  schemas.py  strategies.py  visualization_backtesting.py  visualization_utils.py
autotrader/frontend/: 2_experiments.py  3_optimization.py  main.py
